[package]
name = "pdf2svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
resvg = "0.41.0"
# glib = "0.18.5"
# cairo-rs = { version = "0.18.5", features = ["png", "pdf"], optional = true }
# poppler = {version = "0.5.0"}

[build-dependencies]
cc = "1.0.28"
